# Khet2-AI

./: Board.cpp  Board.h  BoardHelpers.h  CMakeLists.txt  Globals.h  LICENSE  MoveGenerator.cpp  MoveGenerator.h  README.md  Types.h  main.cpp  makefile  notation.txt  protocol.txt  runner.py
Source/: Board.cpp  Board.h  BoardHelpers.h  Calculator.cpp  Calculator.h  CommsHandler.cpp  CommsHandler.h  EvalParams.h  Evaluator.cpp  Evaluator.h  Globals.h  Laser.cpp  Laser.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveHelpers.h  PathLaser.h  Search.cpp  Search.h  SearchParams.h  SquareHelpers.h  TranspositionTable.h  Types.h  Zobrist.h  main.cpp  makefile
Source/Tests/: MakeMoveTest.h  MakeMoveTests.suite  MoveGenTest.h  MoveGenTests.suite  TerminationTest.h
src/: CMakeLists.txt  CommsHandler.cpp  CommsHandler.h  Evaluator.cpp  Search.cpp  main.cpp
src/core/: Bitboard.cpp  Bitboard.h  Bitboard.hpp  Board.cpp  Board.h  CMakeLists.txt  Calculator.cpp  Calculator.h  EvalLaser.h  EvalParams.h  Evaluator.cpp  Evaluator.h  Globals.h  ILaserable.h  Laser.cpp  Laser.h  MoveGenerator.cpp  MoveGenerator.h  MoveHelpers.h  PathLaser.h  Search.cpp  Search.h  SquareHelpers.h  Utils.cpp  Utils.h  Zobrist.cpp  Zobrist.h
src/tests/: CMakeLists.txt  MakeMoveTest.h  MakeMoveTests.cpp  MoveGenTest.h  MoveGenTests.cpp  TerminationTest.h  TerminationTests.cpp  TestBase.h  TestRunner.h  catch_main.cpp  test.cpp
